fix(navbar): fixed the signin not collapsing

--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -85,3 +85,8 @@
   border: 3px solid rgb(36, 36, 36);
   color: rgb(36, 36, 36);
 }
+
+.right-btn {
+  width: 150px;
+  text-align: center;
+}
