--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,11 @@ body {
   color: white;
 }
 
+.purple-btn-outline {
+  background-color: transparent;
+  border: 1px solid #880e4f;
+  color: #880e4f;
+}
 
 .margin-top {
   margin-top: 16px;
